--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      .form-control:focus{border-color: red;  box-shadow: none; -webkit-box-shadow: none;} 
+      .has-error .form-control:focus{box-shadow: none; -webkit-box-shadow: none;}
+      </style>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -26,7 +30,8 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body >
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +44,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
   </body>
 </html>
